--- a/daiweisi/report/TULIPANIVERDIFC.html
+++ b/daiweisi/report/TULIPANIVERDIFC.html
@@ -11,6 +11,22 @@
         <div class="testoCopertina"><h1>Report annuale <br>TULIPANIVERDI FC</h1></div>
     </div> -->
     <div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 10</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Martinez Jo. - 6</div>
+        <div class="difensori giocatori">|Mazzocchi-6||Darmian-6||Calabria-8||Dimarco-7.5|</div>
+        <div class="centrocampisti giocatori">|Pasalic-6||Frattesi-6||Lovric-6|</div>
+        <div class="attaccanti giocatori">|Giroud-13.5||Beltran L.-6.5||Sanabria-6|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Musso</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Martinez Jo.</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Dimarco</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Calabria</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">8 (7)</span> <br><span class="aligned-span">Darmian</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Mazzocchi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Doig</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Dorgu</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Pedersen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">El Shaarawy</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Jankto</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Pasalic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Frattesi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Bajrami</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Lovric</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Ciurria</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Reijnders</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Sanabria</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Jovic</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Giroud</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">13.5 (7.5)</span> <br><span class="aligned-span">Almqvist</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Beltran L.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Carnesecchi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Smalling</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Dybala</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 79.5</h2>
+</div><div class="aParent" style="height: 1200px;">
     <h3>Miglior formazione per la giornata 5</h3>
     <div class="container" style="width: 750px;">
         <img src="formation_field.png" alt="Snow" style="width: 750px;">
@@ -74,7 +90,23 @@
     <h4>Bonus imbattibilita: 0</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 69.5</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 9</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Carnesecchi - 6.5</div>
+        <div class="difensori giocatori">|Dorgu-5.5||Doig-5.5||Darmian-6||Calabria-6||Dimarco-6|</div>
+        <div class="centrocampisti giocatori">|El Shaarawy-10||Jankto-8||Pasalic-7.5||Frattesi-6|</div>
+        <div class="attaccanti giocatori">|Giroud-6|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Carnesecchi</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Dimarco</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Calabria</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Darmian</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Mazzocchi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Doig</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Dorgu</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Pedersen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">4.5 (5)</span> <br><span class="aligned-span">El Shaarawy</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Jankto</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">8 (7)</span> <br><span class="aligned-span">Pasalic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Frattesi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Reijnders</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">4.5 (5)</span> <br><span class="aligned-span">Sanabria</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Jovic</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Giroud</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Almqvist</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Beltran L.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Musso</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Martinez Jo.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Smalling</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Bajrami</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Lovric</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Ciurria</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Dybala</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 75</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 289</h1>
+    <h1>TOTALE PUNTI MASSIMO: 443.5</h1>
 </body>
 </html>
