--- a/daiweisi/report/GuardaMilanoFC.html
+++ b/daiweisi/report/GuardaMilanoFC.html
@@ -11,6 +11,22 @@
         <div class="testoCopertina"><h1>Report annuale <br>Guarda Milano FC</h1></div>
     </div> -->
     <div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 10</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Sommer - 6.5</div>
+        <div class="difensori giocatori">|Bijol-6||Vina-6||Martin-6||Sabelli-6.5|</div>
+        <div class="centrocampisti giocatori">|Gudmundsson A.-10||Pessina-6||Coulibaly L.-6|</div>
+        <div class="attaccanti giocatori">|Chiesa-6.5||Simeone-6||Pedro-6|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Sommer</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Turati</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">2 (6)</span> <br><span class="aligned-span">Mario Rui</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Sabelli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Mancini</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Martin</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Mari'</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Vina</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Bijol</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Candreva</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Paredes</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Cristante</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Pessina</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6.5)</span> <br><span class="aligned-span">Arthur Melo</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Marin</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Coulibaly L.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Gudmundsson A.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Chiesa</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Simeone</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Pedro</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Cambiaghi</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Castellanos</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Cerofolini</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Juan Jesus</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Osimhen</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 73.5</h2>
+</div><div class="aParent" style="height: 1200px;">
     <h3>Miglior formazione per la giornata 5</h3>
     <div class="container" style="width: 750px;">
         <img src="formation_field.png" alt="Snow" style="width: 750px;">
@@ -74,7 +90,23 @@
     <h4>Bonus imbattibilita: 0</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 81</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 9</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Sommer - 6.5</div>
+        <div class="difensori giocatori">|Bijol-6||Mari'-6.5||Mancini-6||Sabelli-6|</div>
+        <div class="centrocampisti giocatori">|Marin-6.5||Pessina-6||Gudmundsson A.-6|</div>
+        <div class="attaccanti giocatori">|Castellanos-7.5||Cambiaghi-7||Simeone-6|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Sommer</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Turati</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">3.5 (5.5)</span> <br><span class="aligned-span">Mario Rui</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Sabelli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Mancini</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6.5)</span> <br><span class="aligned-span">Mari'</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Vina</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Bijol</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Candreva</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Paredes</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Cristante</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Pessina</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Arthur Melo</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Marin</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Coulibaly L.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Gudmundsson A.</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6.5)</span> <br><span class="aligned-span">Chiesa</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Simeone</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Pedro</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Cambiaghi</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">7 (7)</span> <br><span class="aligned-span">Castellanos</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Cerofolini</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Juan Jesus</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Martin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Osimhen</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 1</h4>
+    <h3>Punteggio: 72</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 318</h1>
+    <h1>TOTALE PUNTI MASSIMO: 463.5</h1>
 </body>
 </html>
