--- a/daiweisi/report/ManchesterSimy.html
+++ b/daiweisi/report/ManchesterSimy.html
@@ -11,6 +11,22 @@
         <div class="testoCopertina"><h1>Report annuale <br>Manchester Simy</h1></div>
     </div> -->
     <div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 10</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Di Gregorio - 5.5</div>
+        <div class="difensori giocatori">|Azzi-6||Olivera-6||Cambiaso-9.5||Bremer-6.5||Acerbi-6.5|</div>
+        <div class="centrocampisti giocatori">|Pulisic-7.5||Malinovskyi-7||Barella-6.5|</div>
+        <div class="attaccanti giocatori">|Immobile-10||Lookman-7.5|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Silvestri</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5.5 (6.5)</span> <br><span class="aligned-span">Di Gregorio</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5.5 (6.5)</span> <br><span class="aligned-span">Luperto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Acerbi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Bremer</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Rrahmani</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">4.5 (4.5)</span> <br><span class="aligned-span">Zappa</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Cambiaso</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">9.5 (7)</span> <br><span class="aligned-span">Olivera</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Azzi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Barella</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Pulisic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Lobotka</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Malinovskyi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7 (6.5)</span> <br><span class="aligned-span">Elmas</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Samardzic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Immobile</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Lookman</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Djuric</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Okafor</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Caprile</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Baldanzi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Iling Junior</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Thauvin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Kaio Jorge</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 0</h4>
+    <h4>Bonus difesa: 3</h4>
+    <h3>Punteggio: 81.5</h2>
+</div><div class="aParent" style="height: 1200px;">
     <h3>Miglior formazione per la giornata 5</h3>
     <div class="container" style="width: 750px;">
         <img src="formation_field.png" alt="Snow" style="width: 750px;">
@@ -74,7 +90,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 3</h4>
     <h3>Punteggio: 83</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 9</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Di Gregorio - 6</div>
+        <div class="difensori giocatori">|Cambiaso-6||Rrahmani-6||Bremer-7||Acerbi-7.5||Luperto-7|</div>
+        <div class="centrocampisti giocatori">|Lobotka-6.5||Malinovskyi-6||Pulisic-5.5|</div>
+        <div class="attaccanti giocatori">|Thauvin-9.5||Lookman-9.5|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Silvestri</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span> <br><span class="aligned-span">Di Gregorio</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (7)</span> <br><span class="aligned-span">Luperto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7 (7)</span> <br><span class="aligned-span">Acerbi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Bremer</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7 (7)</span> <br><span class="aligned-span">Rrahmani</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Zappa</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Cambiaso</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Barella</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Pulisic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Lobotka</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Malinovskyi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Samardzic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Baldanzi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Immobile</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">-0.5 (0)</span> <br><span class="aligned-span">Thauvin</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9.5 (7)</span> <br><span class="aligned-span">Lookman</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9.5 (7)</span> <br><span class="aligned-span">Djuric</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Kaio Jorge</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Caprile</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Olivera</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Azzi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Elmas</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Iling Junior</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Okafor</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 0</h4>
+    <h4>Bonus difesa: 3</h4>
+    <h3>Punteggio: 79.5</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 306</h1>
+    <h1>TOTALE PUNTI MASSIMO: 467</h1>
 </body>
 </html>
