--- a/daiweisi/report/mobile/BOTAFIGA.html
+++ b/daiweisi/report/mobile/BOTAFIGA.html
@@ -9,6 +9,24 @@
 <body>
   <div class="container">
   <div class="header">
+    <h1>Miglior formazione per la giornata 10</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Skorupski - 5.5</div>
+    <div class="player" style="top: 17%; left: 20%;">Kristensen - 5</div><div class="player" style="top: 37%; left: 20%;">N'dicka - 5.5</div><div class="player" style="top: 57%; left: 20%;">Lazzari - 5.5</div><div class="player" style="top: 77%; left: 20%;">Faraoni - 6</div> 
+    <div class="player" style="top: 27%; left: 40%;">Boloca - 10</div><div class="player" style="top: 47%; left: 40%;">Makoumbou - 9.5</div><div class="player" style="top: 67%; left: 40%;">De Ketelaere - 6</div>
+    <div class="player" style="top: 27%; left: 70%;">Retegui - 6.5</div><div class="player" style="top: 47%; left: 70%;">Martinez L. - 5.5</div><div class="player" style="top: 67%; left: 70%;">Krstovic - 5.5</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Skorupski</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5.5 (6.5)</span></li><li><span class="aligned-span">Faraoni</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Lazzari</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">N'dicka</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Birindelli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Kristensen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Zaccagni</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Aouar</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Weah</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">De Ketelaere</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Boloca</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Makoumbou</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">9.5 (6.5)</span></li><li><span class="aligned-span">Martinez L.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Retegui</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Krstovic</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Ravaglia F.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Christensen O.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Hysaj</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Beukema</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Kayode</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Kastanos</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Radonjic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Lapadula</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Brekalo</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Davis K.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 71.5</div>
+
+</div>
+<div class="container">
+  <div class="header">
     <h1>Miglior formazione per la giornata 5</h1>
   </div>
   <div class="field">
@@ -79,7 +97,25 @@
   <div>Punteggio: 80</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 9</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Skorupski - 5</div>
+    <div class="player" style="top: 7%; left: 20%;">Kristensen - 6</div><div class="player" style="top: 27%; left: 20%;">Beukema - 5.5</div><div class="player" style="top: 47%; left: 20%;">Birindelli - 6.5</div><div class="player" style="top: 67%; left: 20%;">N'dicka - 6</div><div class="player" style="top: 87%; left: 20%;">Lazzari - 6</div> 
+    <div class="player" style="top: 17%; left: 40%;">Weah - 7</div><div class="player" style="top: 37%; left: 40%;">Zaccagni - 6.5</div><div class="player" style="top: 57%; left: 40%;">Aouar - 6</div><div class="player" style="top: 77%; left: 40%;">De Ketelaere - 5.5</div>
+    <div class="player" style="top: 47%; left: 70%;">Martinez L. - 10</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Skorupski</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span></li><li><span class="aligned-span">Faraoni</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">4.5 (5)</span></li><li><span class="aligned-span">Lazzari</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">N'dicka</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Birindelli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Beukema</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Kristensen</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Kayode</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Zaccagni</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Kastanos</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">4.5 (5)</span></li><li><span class="aligned-span">Aouar</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Weah</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7 (6.5)</span></li><li><span class="aligned-span">De Ketelaere</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Boloca</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Makoumbou</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Martinez L.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Brekalo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Krstovic</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Ravaglia F.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Christensen O.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Hysaj</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Radonjic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Lapadula</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Davis K.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Retegui</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 71</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 314</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 456.5</h1>
 </body>
 </html>
