--- a/daiweisi/report/mobile/Fighetteanastro.html
+++ b/daiweisi/report/mobile/Fighetteanastro.html
@@ -9,6 +9,24 @@
 <body>
   <div class="container">
   <div class="header">
+    <h1>Miglior formazione per la giornata 10</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Milinkovic-Savic V. - 6.5</div>
+    <div class="player" style="top: 7%; left: 20%;">Carlos Augusto - 6.5</div><div class="player" style="top: 27%; left: 20%;">Scalvini - 6</div><div class="player" style="top: 47%; left: 20%;">Ruggeri - 6.5</div><div class="player" style="top: 67%; left: 20%;">Lovato - 5.5</div><div class="player" style="top: 87%; left: 20%;">Rodriguez R. - 5.5</div> 
+    <div class="player" style="top: 27%; left: 40%;">Mkhitaryan - 6</div><div class="player" style="top: 47%; left: 40%;">Guendouzi - 6</div><div class="player" style="top: 67%; left: 40%;">Kamada - 6</div>
+    <div class="player" style="top: 37%; left: 70%;">Thuram - 10</div><div class="player" style="top: 57%; left: 70%;">Bonazzoli - 6</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Milinkovic-Savic V.</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Montipo'</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span></li><li><span class="aligned-span">Biraghi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Rodriguez R.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Lovato</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Erlic</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Ruggeri</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Scalvini</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Carlos Augusto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Pereyra</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Mkhitaryan</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Guendouzi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Duda</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Kamada</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Belotti</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Bonazzoli</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Lukaku</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Thuram</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Gemello</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Danilo</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Matheus Henrique</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Vlasic</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Harroui</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Caso</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Karlsson</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 1</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 72.5</div>
+
+</div>
+<div class="container">
+  <div class="header">
     <h1>Miglior formazione per la giornata 5</h1>
   </div>
   <div class="field">
@@ -79,7 +97,25 @@
   <div>Punteggio: 79.5</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 9</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Montipo' - 3</div>
+    <div class="player" style="top: 17%; left: 20%;">Carlos Augusto - 5.5</div><div class="player" style="top: 37%; left: 20%;">Scalvini - 6.5</div><div class="player" style="top: 57%; left: 20%;">Ruggeri - 6</div><div class="player" style="top: 77%; left: 20%;">Erlic - 5.5</div> 
+    <div class="player" style="top: 27%; left: 40%;">Mkhitaryan - 6.5</div><div class="player" style="top: 47%; left: 40%;">Guendouzi - 6.5</div><div class="player" style="top: 67%; left: 40%;">Pereyra - 6</div>
+    <div class="player" style="top: 27%; left: 70%;">Thuram - 10</div><div class="player" style="top: 47%; left: 70%;">Belotti - 6</div><div class="player" style="top: 67%; left: 70%;">Lukaku - 6</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Milinkovic-Savic V.</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">3 (6)</span></li><li><span class="aligned-span">Montipo'</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">3 (6)</span></li><li><span class="aligned-span">Rodriguez R.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Erlic</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Ruggeri</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Scalvini</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Carlos Augusto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Pereyra</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Mkhitaryan</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Guendouzi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Vlasic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Kamada</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Belotti</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Bonazzoli</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Lukaku</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Thuram</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Gemello</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Biraghi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Danilo</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Lovato</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Duda</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Matheus Henrique</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Harroui</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Caso</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Karlsson</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 68.5</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 300.5</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 441.5</h1>
 </body>
 </html>
