--- a/daiweisi/report/mobile/Jultimi.html
+++ b/daiweisi/report/mobile/Jultimi.html
@@ -9,6 +9,24 @@
 <body>
   <div class="container">
   <div class="header">
+    <h1>Miglior formazione per la giornata 10</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Falcone - 5</div>
+    <div class="player" style="top: 17%; left: 20%;">Oyono - 5.5</div><div class="player" style="top: 37%; left: 20%;">Di Lorenzo - 6.5</div><div class="player" style="top: 57%; left: 20%;">Kolasinac - 6.5</div><div class="player" style="top: 77%; left: 20%;">Marusic - 6</div> 
+    <div class="player" style="top: 17%; left: 40%;">Krunic - 6</div><div class="player" style="top: 37%; left: 40%;">Lazovic - 6</div><div class="player" style="top: 57%; left: 40%;">Gagliardini - 6</div><div class="player" style="top: 77%; left: 40%;">Locatelli - 6</div>
+    <div class="player" style="top: 37%; left: 70%;">Muriel - 6</div><div class="player" style="top: 57%; left: 70%;">Kvaratskhelia - 6</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Falcone</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span></li><li><span class="aligned-span">Maignan</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">3.5 (5.5)</span></li><li><span class="aligned-span">Marusic</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Kolasinac</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Di Lorenzo</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6)</span></li><li><span class="aligned-span">Ebuehi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Oyono</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Krunic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Lazovic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Gagliardini</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Locatelli</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Luis Alberto</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Calhanoglu</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Zambo Anguissa</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Muriel</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Zapata D.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Nzola</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Kvaratskhelia</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Sportiello</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Izzo</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Lucumi'</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Hien</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Adopo</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Petagna</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Deulofeu</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 66.5</div>
+
+</div>
+<div class="container">
+  <div class="header">
     <h1>Miglior formazione per la giornata 5</h1>
   </div>
   <div class="field">
@@ -79,7 +97,25 @@
   <div>Punteggio: 73.5</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 9</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Falcone - 5</div>
+    <div class="player" style="top: 17%; left: 20%;">Oyono - 6</div><div class="player" style="top: 37%; left: 20%;">Ebuehi - 6</div><div class="player" style="top: 57%; left: 20%;">Di Lorenzo - 6</div><div class="player" style="top: 77%; left: 20%;">Marusic - 6</div> 
+    <div class="player" style="top: 17%; left: 40%;">Luis Alberto - 10</div><div class="player" style="top: 37%; left: 40%;">Calhanoglu - 10</div><div class="player" style="top: 57%; left: 40%;">Lazovic - 9.5</div><div class="player" style="top: 77%; left: 40%;">Locatelli - 9.5</div>
+    <div class="player" style="top: 37%; left: 70%;">Kvaratskhelia - 13.5</div><div class="player" style="top: 57%; left: 70%;">Muriel - 6</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Falcone</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span></li><li><span class="aligned-span">Marusic</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Kolasinac</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Di Lorenzo</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Ebuehi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Oyono</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Krunic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Lazovic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">9.5 (6.5)</span></li><li><span class="aligned-span">Gagliardini</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Locatelli</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">9.5 (7)</span></li><li><span class="aligned-span">Luis Alberto</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7.5)</span></li><li><span class="aligned-span">Calhanoglu</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Muriel</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Nzola</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Kvaratskhelia</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">13.5 (7.5)</span></li><li><span class="aligned-span">Sportiello</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Maignan</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Izzo</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Lucumi'</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Hien</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Zambo Anguissa</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Adopo</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Petagna</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Zapata D.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Deulofeu</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 88.5</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 309.5</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 464.5</h1>
 </body>
 </html>
