--- a/daiweisi/report/mobile/ManchesterSimy.html
+++ b/daiweisi/report/mobile/ManchesterSimy.html
@@ -9,6 +9,24 @@
 <body>
   <div class="container">
   <div class="header">
+    <h1>Miglior formazione per la giornata 10</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Di Gregorio - 5.5</div>
+    <div class="player" style="top: 7%; left: 20%;">Azzi - 6</div><div class="player" style="top: 27%; left: 20%;">Olivera - 6</div><div class="player" style="top: 47%; left: 20%;">Cambiaso - 9.5</div><div class="player" style="top: 67%; left: 20%;">Bremer - 6.5</div><div class="player" style="top: 87%; left: 20%;">Acerbi - 6.5</div> 
+    <div class="player" style="top: 27%; left: 40%;">Pulisic - 7.5</div><div class="player" style="top: 47%; left: 40%;">Malinovskyi - 7</div><div class="player" style="top: 67%; left: 40%;">Barella - 6.5</div>
+    <div class="player" style="top: 37%; left: 70%;">Immobile - 10</div><div class="player" style="top: 57%; left: 70%;">Lookman - 7.5</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Silvestri</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5.5 (6.5)</span></li><li><span class="aligned-span">Di Gregorio</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5.5 (6.5)</span></li><li><span class="aligned-span">Luperto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Acerbi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Bremer</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Rrahmani</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">4.5 (4.5)</span></li><li><span class="aligned-span">Zappa</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Cambiaso</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">9.5 (7)</span></li><li><span class="aligned-span">Olivera</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Azzi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Barella</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Pulisic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7.5 (6.5)</span></li><li><span class="aligned-span">Lobotka</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Malinovskyi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">7 (6.5)</span></li><li><span class="aligned-span">Elmas</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Samardzic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Immobile</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Lookman</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">7.5 (6.5)</span></li><li><span class="aligned-span">Djuric</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Okafor</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Caprile</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Baldanzi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Iling Junior</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Thauvin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Kaio Jorge</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 3</div>
+  <div>Punteggio: 81.5</div>
+
+</div>
+<div class="container">
+  <div class="header">
     <h1>Miglior formazione per la giornata 5</h1>
   </div>
   <div class="field">
@@ -79,7 +97,25 @@
   <div>Punteggio: 83</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 9</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Di Gregorio - 6</div>
+    <div class="player" style="top: 7%; left: 20%;">Cambiaso - 6</div><div class="player" style="top: 27%; left: 20%;">Rrahmani - 6</div><div class="player" style="top: 47%; left: 20%;">Bremer - 7</div><div class="player" style="top: 67%; left: 20%;">Acerbi - 7.5</div><div class="player" style="top: 87%; left: 20%;">Luperto - 7</div> 
+    <div class="player" style="top: 27%; left: 40%;">Lobotka - 6.5</div><div class="player" style="top: 47%; left: 40%;">Malinovskyi - 6</div><div class="player" style="top: 67%; left: 40%;">Pulisic - 5.5</div>
+    <div class="player" style="top: 37%; left: 70%;">Thauvin - 9.5</div><div class="player" style="top: 57%; left: 70%;">Lookman - 9.5</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Silvestri</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5 (6)</span></li><li><span class="aligned-span">Di Gregorio</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (7)</span></li><li><span class="aligned-span">Luperto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7 (7)</span></li><li><span class="aligned-span">Acerbi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7.5 (6.5)</span></li><li><span class="aligned-span">Bremer</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7 (7)</span></li><li><span class="aligned-span">Rrahmani</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Zappa</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Cambiaso</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Barella</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Pulisic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Lobotka</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Malinovskyi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Samardzic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Baldanzi</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Immobile</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">-0.5 (0)</span></li><li><span class="aligned-span">Thauvin</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9.5 (7)</span></li><li><span class="aligned-span">Lookman</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">9.5 (7)</span></li><li><span class="aligned-span">Djuric</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Kaio Jorge</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Caprile</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Olivera</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Azzi</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Elmas</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Iling Junior</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Okafor</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 3</div>
+  <div>Punteggio: 79.5</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 306</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 467</h1>
 </body>
 </html>
