--- a/daiweisi/report/mobile/WandaNazionale.html
+++ b/daiweisi/report/mobile/WandaNazionale.html
@@ -9,6 +9,24 @@
 <body>
   <div class="container">
   <div class="header">
+    <h1>Miglior formazione per la giornata 10</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Terracciano - 6</div>
+    <div class="player" style="top: 7%; left: 20%;">Posch - 6</div><div class="player" style="top: 27%; left: 20%;">Kalulu - 6</div><div class="player" style="top: 47%; left: 20%;">Bellanova - 6</div><div class="player" style="top: 67%; left: 20%;">Tomori - 6.5</div><div class="player" style="top: 87%; left: 20%;">Romagnoli - 6.5</div> 
+    <div class="player" style="top: 27%; left: 40%;">Zielinski - 6</div><div class="player" style="top: 47%; left: 40%;">Kostic - 6</div><div class="player" style="top: 67%; left: 40%;">Volpato - 6</div>
+    <div class="player" style="top: 37%; left: 70%;">Scamacca - 15</div><div class="player" style="top: 57%; left: 70%;">Raspadori - 10</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Terracciano</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (7)</span></li><li><span class="aligned-span">Rui Patricio</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">5.5 (6.5)</span></li><li><span class="aligned-span">Romagnoli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Pavard</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Tomori</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Bellanova</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Kalulu</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Bakker</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Posch</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Zielinski</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Bonaventura</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Ikone'</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Kostic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Volpato</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Scamacca</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">15 (8)</span></li><li><span class="aligned-span">Gonzalez N.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Raspadori</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Colombo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Luvumbo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Lauriente'</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Svilar</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Cuadrado</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Pellegrini Lo.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Messias</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Mboula</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 0</div>
+  <div>Bonus difesa: 3</div>
+  <div>Punteggio: 83</div>
+
+</div>
+<div class="container">
+  <div class="header">
     <h1>Miglior formazione per la giornata 5</h1>
   </div>
   <div class="field">
@@ -79,7 +97,25 @@
   <div>Punteggio: 75</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 9</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Rui Patricio - 6.5</div>
+    <div class="player" style="top: 17%; left: 20%;">Kalulu - 6</div><div class="player" style="top: 37%; left: 20%;">Bellanova - 6</div><div class="player" style="top: 57%; left: 20%;">Tomori - 6.5</div><div class="player" style="top: 77%; left: 20%;">Romagnoli - 6.5</div> 
+    <div class="player" style="top: 27%; left: 40%;">Zielinski - 6.5</div><div class="player" style="top: 47%; left: 40%;">Bonaventura - 6</div><div class="player" style="top: 67%; left: 40%;">Kostic - 6</div>
+    <div class="player" style="top: 27%; left: 70%;">Luvumbo - 10</div><div class="player" style="top: 47%; left: 70%;">Raspadori - 8</div><div class="player" style="top: 67%; left: 70%;">Scamacca - 7.5</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Terracciano</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">4 (6)</span></li><li><span class="aligned-span">Rui Patricio</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Romagnoli</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Pavard</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Tomori</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Bellanova</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Kalulu</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Zielinski</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Bonaventura</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Kostic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Scamacca</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">7.5 (6.5)</span></li><li><span class="aligned-span">Gonzalez N.</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Raspadori</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">8 (7)</span></li><li><span class="aligned-span">Colombo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Luvumbo</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Lauriente'</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Svilar</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Cuadrado</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Bakker</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Posch</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Pellegrini Lo.</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Ikone'</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Messias</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Volpato</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Mboula</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 1</div>
+  <div>Bonus difesa: 1</div>
+  <div>Punteggio: 77.5</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 321</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 481.5</h1>
 </body>
 </html>
