--- a/daiweisi/report/mobile/monabeach.html
+++ b/daiweisi/report/mobile/monabeach.html
@@ -9,6 +9,24 @@
 <body>
   <div class="container">
   <div class="header">
+    <h1>Miglior formazione per la giornata 10</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Szczesny - 6</div>
+    <div class="player" style="top: 17%; left: 20%;">Baschirotto - 5.5</div><div class="player" style="top: 37%; left: 20%;">Dumfries - 6.5</div><div class="player" style="top: 57%; left: 20%;">Parisi - 6.5</div><div class="player" style="top: 77%; left: 20%;">Buongiorno - 10</div> 
+    <div class="player" style="top: 27%; left: 40%;">Felipe Anderson - 6.5</div><div class="player" style="top: 47%; left: 40%;">Orsolini - 6</div><div class="player" style="top: 67%; left: 40%;">Rabiot - 6</div>
+    <div class="player" style="top: 27%; left: 70%;">Soule' - 13.5</div><div class="player" style="top: 47%; left: 70%;">Zirkzee - 10</div><div class="player" style="top: 67%; left: 70%;">Lucca - 10</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Szczesny</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">De Vrij</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Buongiorno</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Bastoni S.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Parisi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Dumfries</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Baschirotto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Felipe Anderson</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Orsolini</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Rabiot</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Nandez</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Ilic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Folorunsho</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span></li><li><span class="aligned-span">Berardi</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Zirkzee</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Soule'</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">13.5 (7.5)</span></li><li><span class="aligned-span">Banda</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Lucca</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Perin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Audero</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Casale</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Thiaw</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Renato Sanches</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Loftus-Cheek</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Sanchez</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 1</div>
+  <div>Bonus difesa: 3</div>
+  <div>Punteggio: 90.5</div>
+
+</div>
+<div class="container">
+  <div class="header">
     <h1>Miglior formazione per la giornata 5</h1>
   </div>
   <div class="field">
@@ -79,7 +97,25 @@
   <div>Punteggio: 90.5</div>
 
 </div>
+<div class="container">
+  <div class="header">
+    <h1>Miglior formazione per la giornata 9</h1>
+  </div>
+  <div class="field">
+    <div class="player" style="top: 50%; left: 10%;">Szczesny - 7</div>
+    <div class="player" style="top: 17%; left: 20%;">Baschirotto - 5.5</div><div class="player" style="top: 37%; left: 20%;">Dumfries - 7.5</div><div class="player" style="top: 57%; left: 20%;">Parisi - 6</div><div class="player" style="top: 77%; left: 20%;">De Vrij - 6.5</div> 
+    <div class="player" style="top: 17%; left: 40%;">Felipe Anderson - 10</div><div class="player" style="top: 37%; left: 40%;">Rabiot - 6.5</div><div class="player" style="top: 57%; left: 40%;">Nandez - 6.5</div><div class="player" style="top: 77%; left: 40%;">Orsolini - 6</div>
+    <div class="player" style="top: 37%; left: 70%;">Soule' - 10</div><div class="player" style="top: 57%; left: 70%;">Berardi - 5.5</div>
+  </div>
+  <ul class="roster">
+    <li><span class="aligned-span">Szczesny</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">7 (7)</span></li><li><span class="aligned-span">De Vrij</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Bastoni S.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Parisi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Dumfries</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7.5 (6.5)</span></li><li><span class="aligned-span">Baschirotto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Thiaw</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">3.5 (4.5)</span></li><li><span class="aligned-span">Felipe Anderson</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Orsolini</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span></li><li><span class="aligned-span">Rabiot</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Nandez</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span></li><li><span class="aligned-span">Ilic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Folorunsho</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span></li><li><span class="aligned-span">Berardi</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Zirkzee</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (6)</span></li><li><span class="aligned-span">Soule'</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span></li><li><span class="aligned-span">Banda</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Lucca</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span></li><li><span class="aligned-span">Perin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Audero</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Buongiorno</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Casale</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Renato Sanches</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Loftus-Cheek</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li><li><span class="aligned-span">Sanchez</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span></li>
+    </ul>
+  <div>Bonus imbattibilita: 1</div>
+  <div>Bonus difesa: 3</div>
+  <div>Punteggio: 81</div>
 
-  <h1>TOTALE PUNTI MASSIMO: 330</h1>
+</div>
+
+  <h1>TOTALE PUNTI MASSIMO: 501.5</h1>
 </body>
 </html>
