--- a/daiweisi/report/monabeach.html
+++ b/daiweisi/report/monabeach.html
@@ -11,6 +11,22 @@
         <div class="testoCopertina"><h1>Report annuale <br>monabeach</h1></div>
     </div> -->
     <div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 10</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Szczesny - 6</div>
+        <div class="difensori giocatori">|Baschirotto-5.5||Dumfries-6.5||Parisi-6.5||Buongiorno-10|</div>
+        <div class="centrocampisti giocatori">|Felipe Anderson-6.5||Orsolini-6||Rabiot-6|</div>
+        <div class="attaccanti giocatori">|Soule'-13.5||Zirkzee-10||Lucca-10|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Szczesny</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">De Vrij</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Buongiorno</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Bastoni S.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Parisi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Dumfries</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Baschirotto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Felipe Anderson</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Orsolini</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Rabiot</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Nandez</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Ilic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Folorunsho</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5.5)</span> <br><span class="aligned-span">Berardi</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Zirkzee</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Soule'</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">13.5 (7.5)</span> <br><span class="aligned-span">Banda</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Lucca</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Perin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Audero</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Casale</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Thiaw</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Renato Sanches</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Loftus-Cheek</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Sanchez</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 3</h4>
+    <h3>Punteggio: 90.5</h2>
+</div><div class="aParent" style="height: 1200px;">
     <h3>Miglior formazione per la giornata 5</h3>
     <div class="container" style="width: 750px;">
         <img src="formation_field.png" alt="Snow" style="width: 750px;">
@@ -74,7 +90,23 @@
     <h4>Bonus imbattibilita: 1</h4>
     <h4>Bonus difesa: 1</h4>
     <h3>Punteggio: 90.5</h2>
+</div><div class="aParent" style="height: 1200px;">
+    <h3>Miglior formazione per la giornata 9</h3>
+    <div class="container" style="width: 750px;">
+        <img src="formation_field.png" alt="Snow" style="width: 750px;">
+        <div class="portiere giocatori">Szczesny - 7</div>
+        <div class="difensori giocatori">|Baschirotto-5.5||Dumfries-7.5||Parisi-6||De Vrij-6.5|</div>
+        <div class="centrocampisti giocatori">|Felipe Anderson-10||Rabiot-6.5||Nandez-6.5||Orsolini-6|</div>
+        <div class="attaccanti giocatori">|Soule'-10||Berardi-5.5|</div>
+    </div>
+    <div id="rosa" style="font-weight: bold;font-size: 20px;">
+        <br><br><br><br><span class="aligned-span">Szczesny</span> - <span class="aligned-span spanRole">P</span> - <span class="aligned-span">7 (7)</span> <br><span class="aligned-span">De Vrij</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Bastoni S.</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Parisi</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Dumfries</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">7.5 (6.5)</span> <br><span class="aligned-span">Baschirotto</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Thiaw</span> - <span class="aligned-span spanRole">D</span> - <span class="aligned-span">3.5 (4.5)</span> <br><span class="aligned-span">Felipe Anderson</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Orsolini</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6 (6)</span> <br><span class="aligned-span">Rabiot</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Nandez</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">6.5 (6.5)</span> <br><span class="aligned-span">Ilic</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Folorunsho</span> - <span class="aligned-span spanRole">C</span> - <span class="aligned-span">5 (5)</span> <br><span class="aligned-span">Berardi</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Zirkzee</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (6)</span> <br><span class="aligned-span">Soule'</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">10 (7)</span> <br><span class="aligned-span">Banda</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Lucca</span> - <span class="aligned-span spanRole">A</span> - <span class="aligned-span">5.5 (5.5)</span> <br><span class="aligned-span">Perin</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Audero</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Buongiorno</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Casale</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Renato Sanches</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Loftus-Cheek</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br><span class="aligned-span">Sanchez</span> - <span class="aligned-span spanRole">N</span> - <span class="aligned-span">0 (0)</span> <br>
+    </div>
+    <br style="clear: both;">
+    <h4>Bonus imbattibilita: 1</h4>
+    <h4>Bonus difesa: 3</h4>
+    <h3>Punteggio: 81</h2>
 </div>
-    <h1>TOTALE PUNTI MASSIMO: 330</h1>
+    <h1>TOTALE PUNTI MASSIMO: 501.5</h1>
 </body>
 </html>
